--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "lucide-react": "^0.298.0",
+    "mongoose": "^8.1.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
